# mcagit

./: .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  McaGit.sln  README.md  SECURITY.md  TESTING.md  codecov.yml
.claude/agent-memory/git-fidelity-researcher/: MEMORY.md  divergences_audit_2026.md  project_context.md  user_profile.md
.claude/agent-memory/minecraft-format-tracker/: MEMORY.md  format-facts.md  project-state.md  user-profile.md  world-layout.md
.claude/agent-memory/nbt-diff-invariant-reviewer/: MEMORY.md  arch.md  bugs.md  identity.md  nbtjson.md  tests.md  user.md
.claude/agent-memory/testanvil-test-author/: MEMORY.md  conventions.md  production-source-map.md  testanvil-api.md
.claude/agent-memory/trust-boundary-exploit-hunter/: MEMORY.md  project-security-structure.md
.claude/agent-memory/world-roundtrip-gauntlet/: MEMORY.md  format-notes.md  gauntlet-invocations.md  known-bugs.md  known-nondeterminism.md
.claude/agents/: git-fidelity-researcher.md  minecraft-format-tracker.md  nbt-diff-invariant-reviewer.md  testanvil-test-author.md  trust-boundary-exploit-hunter.md  world-roundtrip-gauntlet.md
.claude/skills/new-git-command/: SKILL.md
.claude/skills/pre-pr/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  markdownlint.yml  release-on-comment.yml  release.yml  rust.yml
compare-worlds/New_World_Newer/: level.dat_old
compare-worlds/New_World_Newer/advancements/: 0bde0058-eef6-4855-b90d-470118f9a8c7.json
compare-worlds/New_World_Older/: level.dat_old
crates/anvil/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/nbt/: Cargo.toml
crates/patch/: Cargo.toml
crates/patch/src/: apply.rs  op_sink.rs
crates/query/: Cargo.toml
crates/repo/: Cargo.toml
crates/repo/src/: bisect.rs  bucket.rs  checkout.rs  chunk_cache.rs  cloud.rs  fsck.rs  gc.rs  hooks.rs  index.rs  lib.rs  manifest.rs  merge.rs  object_store.rs  pathspec.rs  remote.rs  replay.rs  repository.rs  serve.rs  sign.rs  snapshot.rs  stash.rs  status.rs  transfer.rs  wirepack.rs
crates/repo/tests/: security_poc.rs
docs/: cloud-backend.md  commands.md  mcapatch-format.md  repo-format.md
docs/architecture/: 0001-nbt-identity.md  0002-canonical-encoding.md  0003-three-way-merge.md  0004-chunk-model-vs-git.md  README.md
rust/: Cargo.toml  README.md
rust/crates/anvil/src/: codec.rs  compression.rs  lib.rs  region.rs
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/cli/tests/: cli.rs
rust/crates/diff/: Cargo.toml
rust/crates/diff/src/: change.rs  comparer.rs  lib.rs  world.rs
rust/crates/nbt/src/: canonical.rs  identity.rs  json.rs  lib.rs  mutf8.rs  path.rs  read.rs  value.rs  write.rs
rust/crates/patch/src/: apply.rs  extract.rs  lib.rs  model.rs
rust/crates/repo/: Cargo.toml
rust/crates/repo/src/: checkout.rs  fsck.rs  lib.rs  merge.rs  object_store.rs  pack.rs  repository.rs  snapshot.rs  stash.rs  status.rs  verify.rs
src/McaDiff/: McaDiff.csproj  PathGuard.cs  Program.cs
src/McaGit/: McaGit.csproj  PathGuard.cs  Program.cs
tests/McaDiff.Tests/: BlockDiffTests.cs  BucketTransportTests.cs  ChunkCacheTests.cs  CommitDriverTests.cs  CoverageGapTests.cs  GitFidelityLeftoverTests.cs  GitFidelityTests.cs  GitLikeTier1Tests.cs  GitLikeTier2Tests.cs  GitLikeTier3Tests.cs  GitLikeTier4Tests.cs  GitLikeTier5Tests.cs  ListMatcherTests.cs  LogDecorateTests.cs  LogFilterTests.cs  McaDiff.Tests.csproj  NbtCanonicalRawTests.cs  NbtCodecTests.cs  NbtComparerTests.cs  NbtCoreAuditTests.cs  NbtDepthGuardTests.cs  NbtFormatAuditTests.cs  NbtPathTests.cs  NetworkTests.cs  OutputFormatterTests.cs  PackAtCommitTests.cs  PackTransferTests.cs  PatchTests.cs  ProgressTests.cs  QueryTests.cs  RegionFileTests.cs  RepoLockTests.cs  RepoTests.cs  RoundTripAuditTests.cs  SafeInflateTests.cs  SecurityTests.cs  ShallowCloneTests.cs  SingleEntryPaletteTests.cs  StatusCalcTests.cs  TestAnvil.cs  (+4 more)
tests/McaGit.Tests/: BlockDiffTests.cs  BucketTransportTests.cs  ChunkCacheTests.cs  CommitDriverTests.cs  CoverageGapTests.cs  GitFidelityLeftoverTests.cs  GitFidelityTests.cs  GitLikeTier1Tests.cs  GitLikeTier2Tests.cs  GitLikeTier3Tests.cs  GitLikeTier4Tests.cs  GitLikeTier5Tests.cs  ListMatcherTests.cs  LogDecorateTests.cs  LogFilterTests.cs  McaGit.Tests.csproj  NbtCanonicalRawTests.cs  NbtCodecTests.cs  NbtComparerTests.cs  NbtCoreAuditTests.cs  NbtDepthGuardTests.cs  NbtFormatAuditTests.cs  NbtPathTests.cs  NetworkTests.cs  OutputFormatterTests.cs  PackAtCommitTests.cs  PackTransferTests.cs  PackfileTests.cs  PatchTests.cs  ProgressTests.cs  QueryTests.cs  RegionFileTests.cs  RepoLockTests.cs  RepoTests.cs  RoundTripAuditTests.cs  SafeInflateTests.cs  SecurityTests.cs  ShallowCloneTests.cs  SingleEntryPaletteTests.cs  StatusCalcTests.cs  (+5 more)
(+200 files in other folders)
