[workspace]
resolver = "2"
members = ["crates/nbt", "crates/anvil", "crates/repo", "crates/diff", "crates/patch", "crates/cli"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
indexmap = "2"
cesu8 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
mca-nbt = { path = "crates/nbt" }
mca-anvil = { path = "crates/anvil" }
mca-repo = { path = "crates/repo" }
mca-diff = { path = "crates/diff" }
mca-patch = { path = "crates/patch" }
base64 = "0.22"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
lz4_flex = "0.11"
tempfile = "3"
blake3 = "1"
zstd = "0.13"
rayon = "1"
memmap2 = "0.9"
arc-swap = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
