[package]
name = "mca-patch"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
mca-nbt = { workspace = true }
mca-anvil = { workspace = true }
mca-diff = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
reflink-copy = "0.1.29"

[dev-dependencies]
tempfile = { workspace = true }
