[package]
name = "mca-repo"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
mca-nbt = { workspace = true }
mca-anvil = { workspace = true }
blake3 = { workspace = true }
zstd = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
arc-swap = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls"] }
tiny_http = "0.12.0"
# S3 SigV4 / Azure SharedKey request signing (cloud bucket transports).
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
# sign.rs stages ssh-keygen payloads/signatures through a temp dir at runtime.
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
