[package]
name = "mcagit"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "mcagit"
path = "src/main.rs"

[dependencies]
mca-repo = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mca-anvil = { workspace = true }
mca-nbt = { workspace = true }
